[gd_scene load_steps=8 format=3 uid="uid://c1y4w5j6k7l8g"]

[ext_resource type="Script" path="res://scripts/main/main.gd" id="1_sqydp"]
[ext_resource type="PackedScene" uid="uid://cgtkwht01e514" path="res://scenes/main/grid_manager.tscn" id="2_76dw7"]
[ext_resource type="PackedScene" uid="uid://cjn6ecipve4xm" path="res://scenes/ui/hud.tscn" id="3_hiluj"]
[ext_resource type="PackedScene" path="res://scenes/ui/reputation_goal_popup.tscn" id="4_popup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.9, 0.9, 0.9, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Node"]
script = ExtResource("1_sqydp")

[node name="HUD" parent="." instance=ExtResource("3_hiluj")]

[node name="GridManager" parent="." instance=ExtResource("2_76dw7")]

[node name="ReputationGoalPopup" parent="." instance=ExtResource("4_popup")]

[node name="StartScreen" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="StartScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="StartScreen/CenterContainer"]
custom_minimum_size = Vector2(900, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
text = "Start"

[connection signal="game_continue" from="HUD" to="." method="_on_hud_game_continue"]
[connection signal="popup_closed" from="ReputationGoalPopup" to="." method="_on_reputation_popup_closed"]
[connection signal="pressed" from="StartScreen/CenterContainer/StartButton" to="." method="_on_start_button_pressed"]
